# prismProxy

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  ENHANCEMENT_PLAN.md  IMPLEMENTATION_PLAN.md  PRODUCT.md  README.md  ca.crt  ca.key  go.mod  go.sum  main.go
DESIGN.md</: prismProxy>
ca/: ca.go
cmd/proxy/: main.go
cmd/server/: main.go
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/src/: config.rs  error.rs  grpc_client.rs  lib.rs  main.rs  sidecar.rs  state.rs
desktop/src-tauri/src/commands/: ai.rs  breakpoints.rs  cert.rs  codegen.rs  collections.rs  diff.rs  environments.rs  mod.rs  perf.rs  rewrites.rs  rules.rs  scripts.rs  search.rs  system.rs  traffic.rs
docs/audit/: codebase-audit.md
docs/design/: DESIGN.md
docs/development/: README.md  architecture.md  git-workflow.md
internal/ai/: claude.go  models.go  ollama.go  openai.go  provider.go  service.go
internal/api/: api.go  breakpoints.go  collections.go  environments.go  rewrites.go
internal/cert/: ca.go  models.go  store.go
internal/codegen/: generator.go  templates.go
internal/perf/: stats.go  (+2 more)
proto/: ai.proto  breakpoints.proto  cert.proto  codegen.proto  collections.proto  common.proto  diff.proto  environments.proto  perf.proto  rewrites.proto  rules.proto  scripts.proto  search.proto  system.proto  traffic.proto
scripts/: build_sidecar.sh  gen_proto.sh
storage/: storage.go
web/: index.html  package-lock.json  package.json  vite.config.ts
(+133 files in other folders)
