[package]
name = "prismproxy-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
